--- a/learnVuejs01/12-前端模块化/01-为啥要有模块化/index.html
+++ b/learnVuejs01/12-前端模块化/01-为啥要有模块化/index.html
@@ -12,7 +12,7 @@
   客户端需完成的事情越来越多，代码量与日俱增。
   为应对代码量的剧增，我们通常将代码组织在多个js文件中，进行维护。
   但此种维护方式，依然不能避免一些灾难性的问题。
-  比如全局变量同名问题。
+  比如全局变量同名问题。kkkkk
   -->
 <body>
   <script src="./main.js"></script>
